--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@ document.addEventListener("DOMContentLoaded", () => {
         </section>
         <!--/.hero-->
       </div>
+      <div class="page__wrapper">
+        <section class="popular-cars target" id="popular-cars">
+          <h2 class="section-heading">Popular Cars</h2>
+          <div class="popular-cars__wrapper">
+            <div class="card">
+              <div class="card__inner">
+                <h3 class="card__name">Car Name</h3>
+                <picture class="picture">
+                  <source media="(min-width: 640px)" type="image/webp" srcset="img/popular-cars-01-640p.webp, img/popular-cars-01-1280p.webp 2x" />
+                  <source media="(min-width: 640px)" type="image/jpg" srcset="img/popular-cars-01-640p.jpg, img/popular-cars-01-1280p.jpg 2x" />
+                  <source media="(min-width: 0)" type="image/webp" srcset="img/popular-cars-01-320p.webp, img/popular-cars-01-640p.webp 2x" /><img class="popular-cars__img" alt="Classic Car" width="320" src="img/popular-cars-01-320p.jpg" srcset="img/popular-cars-01-640p.jpg 2x" />
+                </picture>
+                <h4 class="card__price">$ 200,000</h4><a class="btn card__btn" href="#">See more</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card__inner">
+                <h3 class="card__name">Car Name</h3>
+                <picture class="picture">
+                  <source media="(min-width: 640px)" type="image/webp" srcset="img/popular-cars-02-640p.webp, img/popular-cars-02-1280p.webp 2x" />
+                  <source media="(min-width: 640px)" type="image/jpg" srcset="img/popular-cars-02-640p.jpg, img/popular-cars-02-1280p.jpg 2x" />
+                  <source media="(min-width: 0)" type="image/webp" srcset="img/popular-cars-02-320p.webp, img/popular-cars-02-640p.webp 2x" /><img class="popular-cars__img" alt="Classic Car" width="320" src="img/popular-cars-02-320p.jpg" srcset="img/popular-cars-02-640p.jpg 2x" />
+                </picture>
+                <h4 class="card__price">$ 100,000</h4><a class="btn card__btn" href="#">See more</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card__inner">
+                <h3 class="card__name">Car Name</h3>
+                <picture class="picture">
+                  <source media="(min-width: 640px)" type="image/webp" srcset="img/popular-cars-03-640p.webp, img/popular-cars-03-1280p.webp 2x" />
+                  <source media="(min-width: 640px)" type="image/jpg" srcset="img/popular-cars-03-640p.jpg, img/popular-cars-03-1280p.jpg 2x" />
+                  <source media="(min-width: 0)" type="image/webp" srcset="img/popular-cars-03-320p.webp, img/popular-cars-03-640p.webp 2x" /><img class="popular-cars__img" alt="Classic Car" width="320" src="img/popular-cars-03-320p.jpg" srcset="img/popular-cars-03-640p.jpg 2x" />
+                </picture>
+                <h4 class="card__price">$ 150,000</h4><a class="btn card__btn" href="#">See more</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--/.popular-cars-->
+      </div>
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
       </footer>
