--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="navbar__menu-line"></div>
             <div class="navbar__menu-line"></div>
           </div>
-          <nav class="navbar target"><a class="navbar__link" href="#home">Home</a><a class="navbar__link" href="#popular-cars">Popular Cars</a><a class="navbar__link" href="#video-gallery">Video Gallery</a><a class="navbar__link" href="#contact">Contact</a></nav>
+          <nav class="navbar target"><a class="navbar__link" href="#home">Home</a><a class="navbar__link" href="#popular-cars">Popular Cars</a><a class="navbar__link" href="#">Video Gallery</a><a class="navbar__link" href="#contact">Contact</a></nav>
           <!--/.navbar-->
         </div>
       </header>
@@ -128,6 +128,34 @@ document.addEventListener("DOMContentLoaded", () => {
           </div>
         </section>
         <!--/.popular-cars-->
+      </div>
+      <div class="page__wrapper">
+        <section class="video-gallery target" id="video-gallery">
+          <h2 class="section-heading">Video Gallery</h2>
+          <div class="video-gallery__container">
+            <div class="video-gallery__row">
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/zmxvc2_MlIw" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/xS2sWOKGtHk" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/jybhLfwDSPM" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/I-BhhxPs4EM" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/B_YpLWuYZC0" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+              <div class="video-gallery__col">
+                <div class="embed-responsive"><iframe src="https://www.youtube.com/embed/ruw7XBOUDOU" frameborder="0" allowfullscreen=""></iframe></div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--/.video-gallery-->
       </div>
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
