--- a/index.html
+++ b/index.html
@@ -187,6 +187,14 @@ document.addEventListener("DOMContentLoaded", () => {
         </section>
         <!--/.image-gallery-->
       </div>
+      <div class="page__wrapper">
+        <section class="contact target" id="contact">
+          <h2 class="section-heading">Contact Us</h2>
+          <form class="contact__form"><input type="text" name="name" placeholder="Your Full Name"><input type="email" name="email" placeholder="Your Email"><textarea name="comment" placeholder="Your Message"></textarea><input type="submit" value="Submit"></form>
+          <p class="contact__copyright">Copyright &copy; CodeAndCreate All Rights Reserved</p>
+        </section>
+        <!--/.contact-->
+      </div>
       <footer class="page-footer" role="contentinfo">
         <div class="page-footer__inner"></div>
       </footer>
